Bug 509454 - Show price per transaction when selected for investment when editing
Summary: Show price per transaction when selected for investment when editing
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-13 09:48 UTC by Thomas Baumgart
Modified: 2025-09-13 10:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-09-13 09:48:43 UTC
SUMMARY
When adding a new transaction, I enter the number of shares into “Shares” and the total amount into “Transaction amount”. This all works well. But when editing an already existing investment “Transaction amount” shows the value of one single share (“Price” in the table).

STEPS TO REPRODUCE
1. Use investment that has enter transaction price (not price per share)
2. Enter a transaction (e.g. buy)
3. Edit the transaction again

OBSERVED RESULT
Label shows "Transaction amount" but price widget contains price per share.

EXPECTED RESULT
Label shows "Transaction amount" and price widget contains total price for all shares.
Comment 1 Thomas Baumgart 2025-09-13 09:53:02 UTC
Git commit 025a193cd8b032d119a2fc9b8e831378ad83d185 by Thomas Baumgart.
Committed on 13/09/2025 at 09:52.
Pushed by tbaumgart into branch 'master'.

Don't modify price widget content if not needed
FIXED-IN: 5.2.2

M  +1    -1    kmymoney/views/investactivities.cpp

https://invent.kde.org/office/kmymoney/-/commit/025a193cd8b032d119a2fc9b8e831378ad83d185
Comment 2 Thomas Baumgart 2025-09-13 10:24:16 UTC
Git commit f4998043a477f5801de5e5c83f25129dab46dcf4 by Thomas Baumgart.
Committed on 13/09/2025 at 09:53.
Pushed by tbaumgart into branch '5.2'.

Don't modify price widget content if not needed
FIXED-IN: 5.2.2
(cherry picked from commit 025a193cd8b032d119a2fc9b8e831378ad83d185)

M  +1    -1    kmymoney/views/investactivities.cpp

https://invent.kde.org/office/kmymoney/-/commit/f4998043a477f5801de5e5c83f25129dab46dcf4