Don't modify price widget content if not needed

BUG: 509454
FIXED-IN: 5.2.2